# Simple2DEngine

./: .gitignore  CMakeLists.txt  Simple2DEngine.sln
Simple2DEngine/: Simple2DEngine.vcxproj  Simple2DEngine.vcxproj.filters
Simple2DEngine/src/: main.cpp
Simple2DEngine/src/components/: InputComponent.cpp  InputComponent.h  MovementComponent.cpp  MovementComponent.h  PositionComponent.h  SpriteComponent.cpp  SpriteComponent.h
Simple2DEngine/src/ecs/: Component.cpp  Component.h  Entity.h  System.h  UniqueId.h
Simple2DEngine/src/engine/: Command.h  Engine.cpp  Engine.h  GSMLoader.h  GSMLoaderImpl.cpp  GSMLoaderImpl.h  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  MenuStateFactory.cpp  MenuStateFactory.h  PausedStateFactory.cpp  PausedStateFactory.h  PlayingStateFactory.cpp  PlayingStateFactory.h  ResourceHolder.h  SFMLWindow.cpp  SFMLWindow.h  SFMLWindowFactory.cpp  SFMLWindowFactory.h  TexturesLoader.h  TexturesLoaderImpl.cpp  TexturesLoaderImpl.h  WindowLoaderImpl.cpp  WindowLoaderImpl.h  World.cpp  World.h
Simple2DEngine/src/engine/core/: Context.h  Engine.h  GameState.cpp  GameState.h  GameStateMachine.h  ResourceHolder.h  TestCommandImpl.cpp  TestCommandImpl.h  World.cpp
Simple2DEngine/src/engine/factories/: GSMLoader.h  MenuStateFactory.cpp  MenuStateFactory.h  PausedStateFactory.h  PlayingStateFactory.cpp  PlayingStateFactory.h  TexturesLoader.h  TexturesLoaderImpl.cpp  TexturesLoaderImpl.h  WindowLoaderImpl.h  WorldLoader.h  WorldLoaderImpl.cpp  WorldLoaderImpl.h
Simple2DEngine/src/systems/: InputUpdater.cpp  InputUpdater.h  MovementUpdater.cpp  RenderingSystem.cpp  RenderingSystem.h  SimpleUpdater.cpp  SimpleUpdater.h  Updater.cpp  Updater.h
cmake_modules/: FindSFML.cmake
scripts/: entities.lua  resources.lua  worlds.lua
src/: main.cpp
src/commands/: Command.h
src/components/: AnimationComponent.cpp  AnimationComponent.h  CameraComponent.cpp  CameraComponent.h  CollisionComponent.h  CommandComponent.cpp  CommandComponent.h  InputComponent.cpp  InputComponent.h  PositionComponent.cpp  SpriteComponent.cpp  SpriteComponent.h  StateComponent.cpp  StateComponent.h
src/ecs/: Component.h  Entity.cpp  Entity.h
src/engine/core/: Context.h  Engine.cpp  Engine.h  GameLoop.cpp  GameLoop.h  GameState.cpp  GameState.h  GameStateContext.cpp  GameStateContext.h  GameStateMachine.cpp  ResourceHolder.h  World.cpp  World.h
src/engine/factories/: AnimationsLoaderImpl.cpp  AnimationsLoaderImpl.h  EntityFactory.h  GSMLoader.h  GSMLoaderImpl.cpp  GSMLoaderImpl.h  LuaResourcesLoader.h  LuaTexturesLoader.cpp  LuaTexturesLoader.h  MenuStateFactory.cpp  PausedStateFactory.cpp  PausedStateFactory.h  PlayingStateFactory.cpp  PlayingStateFactory.h  ResourcesLoader.h  TexturesLoader.h  TexturesLoaderImpl.cpp  TexturesLoaderImpl.h  WindowLoader.h  WindowLoaderImpl.h  WorldFactory.h  WorldLoader.h  WorldLoaderImpl.cpp  WorldLoaderImpl.h
src/lua/: LuaHandler.cpp  LuaHandler.h  LuaRegistrator.h
src/lua/core/: LuaHandler.h
src/lua/factories/: LuaEntityFactory.cpp  LuaEntityFactory.h  LuaFunctionCommand.cpp  LuaFunctionCommand.h  LuaResourcesLoader.h  LuaWorldFactory.cpp  LuaWorldFactory.h  LuaWorldLoader.cpp  LuaWorldLoader.h  MenuStateFactory.h  PlayingStateFactory.cpp  WindowLoaderImpl.cpp
src/systems/: AnimationRenderer.cpp  AnimationRenderer.h  AnimationUpdater.cpp  AnimationUpdater.h  CameraUpdater.cpp  CameraUpdater.h  CollisionSystem.cpp  CollisionSystem.h  InputUpdater.cpp  InputUpdater.h  MovementUpdater.cpp  MovementUpdater.h  Renderer.h  SpritesRenderer.cpp  SpritesRenderer.h  StateUpdater.cpp  StateUpdater.h  Updater.h
src/utils/animation/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h
src/utils/collisions/: Body.h  QuadTree.cpp  QuadTree.h
src/utils/commands/: Command.h  TestCommandImpl.cpp  TestStateCommandImpl.cpp  TestStateCommandImpl.h
